update v1 en & fr

--- a/en v2/contact.html
+++ b/en v2/contact.html
@@ -17,7 +17,7 @@
 <body>
 <header>
 	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
+		<a title="Home" href="http://ehalter.com/en">
 			<img alt="Emmanuel Halter" src="images/title.png"/>
 		</a>
 		<div>
