--- a/en v2/history.html
+++ b/en v2/history.html
@@ -7,10 +7,10 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			  History | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
-		<link rel="icon" type="image/png" href="icon/favicon.png" />
+		<link rel="stylesheet" type="text/css" href="css/history.css">
+		<link rel="icon" type="image/png" href="icon/favicon.png"/>
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/histoire.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/history.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -70,104 +70,26 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
 </header>
 <div class="content">
-	<section id="beginning">
-		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
-		</p>
-		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
-		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
-		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
-		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
-		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
-		</li>
-	</section>
+	<article>
+	<h1>Operation LightStory</h1>
+	<p>The enemy sent spies into the past to change the conflict' future and maybe more... You must <strong>stop them</strong>.<p>
+	<p>Therefore, tomorrow you will jump on <strong>History</strong>. You will be in unknown lands surrounded by ancient civilization. Be careful.
+	fortunately, Men under your command are experts. They are well-trained, curious and have one dream : knowledge. </p>
+	<p>You will find all the details about this operation by <strong>looking the file on your briefing table</strong>.</p>
+	<p>Good luck Commander !</p>
+	</article>
+	<map name="mbriefing">
+		<img id="history" src="images/ww2/history.png"/>
+		<a href="#">
+			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png" /> <!--onmouseover="this.src='images/ww2/sfiles_test.png'" onmouseout="this.src='images/ww2/sfiles.png'"-->
+		</a>
+		<a target="_blank" href="http://www.39-45.org/portailv2/news/news.php">
+			<img id="boussole" alt="boussole" src="images/ww2/boussole.png"/>
+		</a>
+	</map>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -197,6 +119,19 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/myJScript.js"></script>	
+<script src="js/history.js"></script>	
+<script type="text/javascript" src="js/reveal.js"></script>
+<div id="myModal" class="reveal-modal">
+		 <h1>Mission Order</h1>
+		 <p>
+			Passionnate about History since i am young, i love to discover <strong>Evolution</strong> of mankind and our planet through the ages.
+			For me, it is a good opportunity <strong>to know</strong> our past.
+		</p>
+		<p>
+			For ten years, i am specialized in WWII the last world conflict of human history.
+			It is also a slight <strong>tribute</strong> to these people who sacrifice led to <strong>Liberty</strong>.
+		</p>
+		<a class="close-reveal-modal">&#215;</a>
+</div>
 </body>
 </html>
