--- a/en v2/imprint.html
+++ b/en v2/imprint.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			  Imprint | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
+		<link rel="stylesheet" type="text/css" href="css/imprint.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/apropos.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/about.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -70,104 +70,36 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
 </header>
 <div class="content">
-	<section id="beginning">
-		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
-		</p>
-		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
-		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
-		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
-		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
-		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
-		</li>
-	</section>
+	<h1>Imprint</h1>
+	<p>Website design by <strong>Emmmanuel HALTER</strong></p>
+	<p>Rights' website in the footer are shared thanks to the original idea of  
+		<a href="http://copyheart.org/">Copyheart</a>
+	</p>
+	<p>Because <strong>JAVA</strong> is not the only interesting technology in my life, this website is developed with : </p>
+		<img alt="technologies" src="icon/html5_css3_jQuery_slogo.png"/>
+	<p>
+		Picture in my section "What can i bring" and my cartoCV has been create thanks to the MindMapping software 
+		<a href="http://www.mindomo.com/">Mindomo</a> and <a href="http://www.mindjet.com/">Mindjet</a>.
+	</p>
+	<p>
+		The page "Voyage" includes in JavaScript the famous 
+		<a href="https://developers.google.com/maps/documentation/javascript/tutorial?hl=fr">API Google Maps</a> and also the new version of this one. 		
+	</p>
+	<p>The Contact form has been created with 
+		<a href="http://posabsolute.github.io/jQuery-Validation-Engine/">Form Validator Engine</a>
+		and graphics on my profile page with
+		<a href="http://www.rgraph.net/">RGraph</a>
+	</p>
+	<p>
+		Editing icons and pictures has been done via GIMP 2 and icon Craft
+	</p>
+	<p>
+		Colors are the metaphors of some of my life's principles : <br>
+		<strong id="bleu">Blue</strong> means <strong id="bleu">open-minded</strong> and <strong id="bleu">integrity</strong>, <strong id="orange">Orange</strong> stands for <strong id="orange">communication</strong> and <strong id="jaune">Yellow</strong> the last one for <strong id="jaune">Happiness !</strong>
+	</p>
 </div>
 <footer>
 		<section id="footerbox-network">
