--- a/en v2/wcibring.html
+++ b/en v2/wcibring.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			  What can i bring | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
+		<link rel="stylesheet" type="text/css" href="css/wcibring.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/apports.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/bring.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -70,104 +70,10 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
 </header>
 <div class="content">
-	<section id="beginning">
-		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
-		</p>
-		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
-		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
-		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
-		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
-		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
-		</li>
-	</section>
+	<img alt="apports" src="images/apportsTest.png"/>
 </div>
 <footer>
 		<section id="footerbox-network">
