--- a/fr v2/histoire.html
+++ b/fr v2/histoire.html
@@ -119,7 +119,7 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/myJScript.js"></script>	
+<script src="js/history.js"></script>	
 <script type="text/javascript" src="js/reveal.js"></script>
 <div id="myModal" class="reveal-modal">
 		 <h1>Ordre du jour</h1>
