--- a/en v2/friends.html
+++ b/en v2/friends.html
@@ -7,10 +7,10 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			  Friends | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
-		<link rel="icon" type="image/png" href="icon/favicon.png" />
+		<link rel="stylesheet" type="text/css" href="css/friends.css">
+		<link rel="icon" type="image/png" href="icon/favicon.png"/>
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body>
@@ -28,14 +28,14 @@
 			<h2 class="source"></h2>			
 		</div>
 	</section>
-	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+	<div class="header-right">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/amis.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/friends.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
-	</section>
+	</div>
 	<nav>
 		<ul id="menu">
 			<li>
@@ -73,101 +73,45 @@
 	</nav>	
 </header>
 <div class="content">
-	<section id="beginning">
-		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
-		</p>
-		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
-		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
+	<h1>Friends</h1>
+	<h3>Because everybody needs a professional network</h3>
+	<p>Interested to talk with passionnate people ? Choose your area !</p>
+	<h2>Mobile &amp; Web Development</h2>
+	<ul>	
 		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
+			<a href="http://adrian.gaudebert.fr/">Adrian Gaudebert</a> - Web Developer
 		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
 		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
+			<a href="http://axel.royerb.com/">Axel Royer</a> - Mobile Apps Developer
 		</li>
-	</section>
+	</ul>
+	<h2>Design &amp; Web</h2>
+	<ul>
+		<li>
+			<a href="http://www.titipops.fr/">Alita Bernachot</a> - Developer / Designer / Draftswoman
+		</li>
+	</ul>
+	<h2>Recruiting</h2>
+	<ul>
+		<li>
+			<a href="http://www.jordico.com/">Daniel Jordi</a> - Recruiter and  jobsearch coach
+		</li>
+		<li>
+			<a href="http://careercake.com/">Aimee Bateman</a> - Recruiter, entrepreneur and careers coach
+		</li>
+	</ul>
+	<h2>Sport</h2>
+	<ul>
+		<li>
+			<a href="http://www.besoin2sport.com/">Matthieu Verneret</a> - Karateka and coach
+		</li>
+	<ul>
+	<h2>Photography</h2>
+	<ul>
+		<li>
+			<a href="">Pauline Darley</a> - Capture your ideas with pictures
+		</li>
+	</ul>
 </div>
 <footer>
 		<section id="footerbox-network">
