--- a/en v2/future.html
+++ b/en v2/future.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			  Future | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
+		<link rel="stylesheet" type="text/css" href="css/future.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/futurs.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/future.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -73,100 +73,18 @@
 	</nav>	
 </header>
 <div class="content">
-	<section id="beginning">
+	<h1>Future Projects</h1>
+	<article>
 		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
+			Although junior on the labor market, i already have a good idea in which way i want to guide my career in the middle run (&asymp; 4 years).
 		</p>
 		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
+			Obviously, i can not predict my futur (maybe i will be Historian in 5 years!) but here are the two paths i would like to develop :
 		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
-		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
-		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
-		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
-		</li>
+	</article>
+	<section>
+		<img alt="Business Analyst" src="images/banalyst.png"/>
+		<img alt="Abroad" src="images/abroad.png"/>
 	</section>
 </div>
 <footer>
