--- a/en v2/recruitment.html
+++ b/en v2/recruitment.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			 Human Ressources | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
+		<link rel="stylesheet" type="text/css" href="css/recruitment.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/recrutement.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/recruitment.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -73,101 +73,25 @@
 	</nav>	
 </header>
 <div class="content">
-	<section id="beginning">
+	<article>
 		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
+			Depuis mes recherches de travail, j'attache une grande importance &agrave; à connaitre le monde des ressources humaines ainsi que <strong>les m&eacute;thodes employ&eacute;es</strong>. 
 		</p>
 		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
+			Cela me permet de <strong>comprendre le march&eacute;</strong> du travail et d'avoir toutes les cl&eacute;s en main pour mon parcours professionnel.
 		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
-		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
-		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
-		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
-		</li>
-	</section>
+		<h1>Je m'intéresse particulièrement à : </h1>
+		<ul>
+			<li>Maitriser les réseaux professionnels</li>
+			<li>Préparer et réussir des entretiens</li>
+			<li>Savoir comment les recherches de travail s'effectuent</li>
+			<li>Suivre les avancées en manière de recrutement</li>
+			<li>Comprendre les comportements des personnes au sein d'une entreprise</li>
+			<li>Perfectionner mes compétences en communication</li>
+		</ul>
+	</article>
+	<img id="networking" alt="networking" src="images/network.png"/>
+	<img id="comm" alt="communication" src="images/fcv.png"/>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -197,6 +121,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/myJScript.js"></script>	
+<script src="js/myJScript.js"></script>
 </body>
 </html>
