--- a/en v2/skills.html
+++ b/en v2/skills.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  HappiWork Plan | Emmanuel HALTER
+			  Skills | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/happiwork.css">
+		<link rel="stylesheet" type="text/css" href="css/skills.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/happiwork.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/competences.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/happiwork.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/skills.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -73,101 +73,11 @@
 	</nav>	
 </header>
 <div class="content">
-	<section id="beginning">
-		<p>
-			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
-		</p>
-		<p>
-			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
-		</p>
-		<p>
-			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
-		</p>
-		<li>
-			<h2>Introduction</h2>
-			<article>
-				<p>
-					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
-				</p>
-			</article>
-		</li>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="calendar">
-		<ol>
-			<li>
-				<h2>August</h2>
-				<article>
-				</article>	
-			</li>
-			<li>
-					<h2>September</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>October</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>November</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>December</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>January</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>February</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>March</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>April</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>May</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>June</h2>
-					<article>
-					</article>
-			</li>
-			<li>
-					<h2>July</h2>
-					<article>
-					</article>
-			</li>
-		</ol>
-	</section>
-	<img alt="fleche" src="images/fleches.png"/>
-	<section id="aftermatch">
-		<li>
-			<h2>Aftermath</h2>
-			<article>
-				<p>
-					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
-				</p>
-			</article>
-		</li>
-	</section>
+		<section>
+			<h1>Level</h1>
+			<canvas id="tSkills" width="700" height="350">[No canvas support]</canvas>
+			<canvas id="fSkills" width="700" height="350">[No canvas support]</canvas>
+		</section>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -197,6 +107,17 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/myJScript.js"></script>	
+<script src="js/profil.js"></script>
+<script src="js/RGraph/libraries/RGraph.common.core.js"></script>
+		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
+
+		<script src="js/RGraph/libraries/RGraph.common.annotate.js"></script>  <!-- Just needed for annotating -->
+		<script src="js/RGraph/libraries/RGraph.common.context.js"></script>   <!-- Just needed for context menus -->
+		<script src="js/RGraph/libraries/RGraph.common.effects.js"></script>   <!-- Just needed for visual effects -->
+		<script src="js/RGraph/libraries/RGraph.common.key.js"></script>       <!-- Just needed for keys -->
+		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
+		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
+		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
+		<script src="js/RGraph/libraries/RGraph.radar.js"></script>  	
 </body>
 </html>
