--- a/en v2/sport.html
+++ b/en v2/sport.html
@@ -16,7 +16,7 @@
 <body>
 <header>
 	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
+		<a title="Home" href="http://ehalter.com/en">
 			<img alt="Emmanuel Halter" src="images/title.png"/>
 		</a>
 		<div>
@@ -39,31 +39,31 @@
 	<nav>
 		<ul id="menu">
 			<li>
-				<a href="http://ehalter.com">Accueil</a>
+				<a href="http://ehalter.com">Home</a>
 			</li>
 			<li>
-				<a href="#">Profil</a>
+				<a href="#">Profile</a>
 				<ul>
-					<li><a href="http://ehalter.com/cv.html">CV</a></li>
-					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
+					<li><a href="http://ehalter.com/cv.html">Resume</a></li>
+					<li><a href="http://ehalter.com/compétences.html">Skills</a></li>
+					<li><a href="http://ehalter.com/apports.html">what can i bring</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="#">Intérêts</a>
+				<a href="#">Interests</a>
 				<ul>
-					<li><a href="http://ehalter.com/histoire.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/voyage.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/histoire.html">History</a></li>
+					<li><a href="http://ehalter.com/voyage.html">Travel</a></li>
 					<li><a href="http://ehalter.com/sport.html">Sport</a></li>
-					<li><a href="http://ehalter.com/recrutement.html">Recrutement</a></li>
+					<li><a href="http://ehalter.com/recrutement.html">Recruitment</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="#">Projets</a>
+				<a href="#">Projects</a>
 				<ul>
 					<li><a href="http://ehalter.com/missions.html">Missions</a></li>
 					<li><a href="http://ehalter.com/happiwork.html">HappiWork Plan</a></li>
-					<li><a href="http://ehalter.com/futurs.html">Futurs</a></li>
+					<li><a href="http://ehalter.com/futurs.html">Future</a></li>
 				</ul>
 			</li>
 			<li>
@@ -91,7 +91,7 @@
 </div>
 <footer>
 		<section id="footerbox-network">
-			<h1>Restons connect&eacute;s</h1>
+			<h1>Stay connected</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
 				</a>
@@ -103,16 +103,16 @@
 				</a>
 		</section>	
 		<section id="footerbox-about">
-			<h1>A propos</h1>
+			<h1>About</h1>
 			<p>
-				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
+				<a href="http://ehalter.com/apropos.html">Imprint</a>
 				||
-				<a href="http://ehalter.com/amis.html">Amis</a>
+				<a href="http://ehalter.com/amis.html">Friends</a>
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
 			<p>
-				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
+				&#9825; 2013 By Emmanuel Halter. Please copy and share.
 			</p>
 		</section>
 </footer>
