--- a/en v2/travel.html
+++ b/en v2/travel.html
@@ -10,14 +10,14 @@
 		<title>
 			  Travel | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/voyage.css">
+		<link rel="stylesheet" type="text/css" href="css/travel.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
 <body onload="initialiser()">
 <header>
 	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
+		<a title="Home" href="http://ehalter.com/en">
 			<img alt="Emmanuel Halter" src="images/title.png"/>
 		</a>
 		<div>
@@ -40,38 +40,38 @@
 	<nav>
 		<ul id="menu">
 			<li>
-				<a href="http://ehalter.com">Accueil</a>
+				<a href="http://ehalter.com">Home</a>
 			</li>
 			<li>
-				<a href="#">Profil</a>
+				<a href="#">Profile</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">CV</a></li>
-					<li><a href="http://ehalter.com/interets.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
+					<li><a href="http://ehalter.com/cv.html">Resume</a></li>
+					<li><a href="http://ehalter.com/compétences.html">Skills</a></li>
+					<li><a href="http://ehalter.com/apports.html">what can i bring</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="#">Intérêts</a>
+				<a href="#">Interests</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
-					<li><a href="http://ehalter.com/interets.html">Sport</a></li>
-					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
+					<li><a href="http://ehalter.com/histoire.html">History</a></li>
+					<li><a href="http://ehalter.com/voyage.html">Travel</a></li>
+					<li><a href="http://ehalter.com/sport.html">Sport</a></li>
+					<li><a href="http://ehalter.com/recrutement.html">Recruitment</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="#">Projets</a>
+				<a href="#">Projects</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">Mission</a></li>
-					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
-					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
+					<li><a href="http://ehalter.com/missions.html">Missions</a></li>
+					<li><a href="http://ehalter.com/happiwork.html">HappiWork Plan</a></li>
+					<li><a href="http://ehalter.com/futurs.html">Future</a></li>
 				</ul>
 			</li>
 			<li>
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>	
+	</nav>
 </header>
 <div class="content" >
 	<article>
@@ -93,7 +93,7 @@
 </div>
 <footer>
 		<section id="footerbox-network">
-			<h1>Restons connect&eacute;s</h1>
+			<h1>Stay connected</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
 				</a>
@@ -105,22 +105,22 @@
 				</a>
 		</section>	
 		<section id="footerbox-about">
-			<h1>A propos</h1>
+			<h1>About</h1>
 			<p>
-				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
+				<a href="http://ehalter.com/apropos.html">Imprint</a>
 				||
-				<a href="http://ehalter.com/amis.html">Amis</a>
+				<a href="http://ehalter.com/amis.html">Friends</a>
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
 			<p>
-				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
+				&#9825; 2013 By Emmanuel Halter. Please copy and share.
 			</p>
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/voyages.js"></script>
+<script src="js/travel.js"></script>
 <script type="text/javascript" src="js/reveal.js"></script>	
 <div id="myModal" class="reveal-modal">
 	<h1>eHaltAir</h1>
