--- a/fr v2/voyage.html
+++ b/fr v2/voyage.html
@@ -120,7 +120,7 @@
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/voyages.js"></script>
+<script src="js/travel.js"></script>
 <script type="text/javascript" src="js/reveal.js"></script>	
 <div id="myModal" class="reveal-modal">
 	<h1>eHaltAir</h1>
