update v2 fr - header & new page

--- a/fr v2/expériences.html
+++ b/fr v2/expériences.html
@@ -9,7 +9,7 @@
 		<title>
 			  Compétences | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/competences.css">
+		<link rel="stylesheet" type="text/css" href="css/experiences.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -107,7 +107,7 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/profil.js"></script>
+<script src="js/experience.js"></script>
 <script src="js/RGraph/libraries/RGraph.common.core.js"></script>
 		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
 
