--- a/fr v2/histoire.html
+++ b/fr v2/histoire.html
@@ -84,7 +84,7 @@
 	<map name="mbriefing">
 		<img id="history" src="images/ww2/history.png"/>
 		<a href="#">
-			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png" /> <!--onmouseover="this.src='images/ww2/sfiles_test.png'" onmouseout="this.src='images/ww2/sfiles.png'"-->
+			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png" onmouseover="this.src='images/ww2/sfiles_test.png'" onmouseout="this.src='images/ww2/sfiles.png'" /> 
 		</a>
 		<a target="_blank" href="http://www.39-45.org/portailv2/news/news.php">
 			<img id="boussole" alt="boussole" src="images/ww2/boussole.png"/>
