--- a/fr v2/index_bis.html
+++ b/fr v2/index_bis.html
@@ -5,11 +5,11 @@
 
 <html lang="fr">
 <head>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Compétences | Emmanuel HALTER
+			  Accueil | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/competences.css">
+		<link rel="stylesheet" type="text/css" href="css/accueil_bis.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -19,7 +19,9 @@
 		<a title="Accueil" href="http://ehalter.com">
 			<img alt="Emmanuel Halter" src="images/title.png"/>
 		</a>
-		<div>
+	</section>
+	<section id="header-right">
+		<div id="quote">
 			<blockquote>
 				<h1>
 					<span class='message'></span>
@@ -27,14 +29,14 @@
 			</blockquote>
 			<h2 class="source"></h2>			
 		</div>
-	</section>
-	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/competences.html">
-			<img alt="fr" src="icon/flag_fr.png"/>
-		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/skills.html">
-			<img alt="en" src="icon/flag_en.png"/>
-		</a>
+		<div id="flag">
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</div>
 	</section>
 	<nav>
 		<ul id="menu">
@@ -46,6 +48,7 @@
 				<ul>
 					<li><a href="http://ehalter.com/cv.html">CV</a></li>
 					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a><li>
 					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
 				</ul>
 			</li>
@@ -73,11 +76,29 @@
 	</nav>	
 </header>
 <div class="content">
-		<section>
-			<h1>Principaux niveaux</h1>
-			<canvas id="tSkills" width="700" height="350">[No canvas support]</canvas>
-			<canvas id="fSkills" width="700" height="350">[No canvas support]</canvas>
-		</section>
+		<img alt="image profil" src="images/profil.png"/>
+		<article>
+			<h1>
+				Bienvenue ! Je m'appelle <strong>Emmanuel</strong> et je suis <strong>Ing&eacute;nieur Java/J2E </strong>
+			</h1>
+			<p>
+				Initialement form&eacute; &agrave; la technique, je m'attelle &agrave; comprendre les liens entre celle-ci et l'aspect fonctionnel des projets. 
+				En dehors du d&eacute;veloppement JAVA &amp; Web, communiquer, analyser et mod&eacute;liser sont donc mes secteurs de pr&eacute;dilections.
+			</p>
+			<p>Je suis &agrave; l'heure actuelle &agrave; la recherche d'une entreprise.</p>
+			<p>Dans cet espace vous pourrez consulter 
+				<a href="http://ehalter.com/cv.html"> mon profil</a>, en apprendre plus 
+				<a href="http://ehalter.com/histoire.html"> sur mes principaux int&eacute;r&ecirc;ts </a>, savoir quelles sont
+				<a href="http://ehalter.com/missions.html">mes projets actuels</a>,
+				ou
+				<a href="http://ehalter.com/blog/"> consulter mon blog</a>.
+				Si vous voulez encore plus d'informations, &eacute;changer avec moi, me rencontrer ou que mon aide peut vous être utile n'h&eacute;sitez pas &agrave; 
+				<a href="http://ehalter.com/contact.html"> me contacter</a>.
+			</p>
+			<p>
+				Bonne visite !
+			</p>
+		</article>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -107,18 +128,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/profil.js"></script>
-<script src="js/RGraph/libraries/RGraph.common.core.js"></script>
-		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
-
-		<script src="js/RGraph/libraries/RGraph.common.annotate.js"></script>  <!-- Just needed for annotating -->
-		<script src="js/RGraph/libraries/RGraph.common.context.js"></script>   <!-- Just needed for context menus -->
-		<script src="js/RGraph/libraries/RGraph.common.effects.js"></script>   <!-- Just needed for visual effects -->
-		<script src="js/RGraph/libraries/RGraph.common.key.js"></script>       <!-- Just needed for keys -->
-		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
-		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
-		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
-		<script src="js/RGraph/libraries/RGraph.radar.js"></script>
-		<script src="js/RGraph/libraries/RGraph.hbar.js"></script> 		
+<script src="js/myJScript.js"></script>
 </body>
 </html>
