--- a/fr v2/mlégales.html
+++ b/fr v2/mlégales.html
@@ -7,9 +7,9 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Compétences | Emmanuel HALTER
+			  Mentions L&eacute;gales | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" href="css/competences.css">
+		<link rel="stylesheet" type="text/css" href="css/apropos.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
 		<!--[if IE]><link rel="shortcut icon" type="image/png" href="icon/favicon.png" /><![endif]-->
 </head>
@@ -29,10 +29,10 @@
 		</div>
 	</section>
 	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/competences.html">
+		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/apropos.html">
 			<img alt="fr" src="icon/flag_fr.png"/>
 		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/skills.html">
+		<a rel="home" title="Anglais" href="http://ehalter.com/en/about.html">
 			<img alt="en" src="icon/flag_en.png"/>
 		</a>
 	</section>
@@ -73,11 +73,33 @@
 	</nav>	
 </header>
 <div class="content">
-		<section>
-			<h1>Principaux niveaux</h1>
-			<canvas id="tSkills" width="700" height="350">[No canvas support]</canvas>
-			<canvas id="fSkills" width="700" height="350">[No canvas support]</canvas>
-		</section>
+	<h1>Mentions L&eacute;gales</h1>
+	<p>Site con&ccedil;u et r&eacute;alis&eacute; par <strong>Emmmanuel HALTER</strong></p>
+	<p>Les droits du site dans le menu du bas sont partag&eacute;s gr&acirc;ce &agrave; l'id&eacute;e originale de 
+		<a href="http://copyheart.org/">Copyheart</a>
+	</p>
+	<p>Parcequ'il n'y a pas que le <strong>JAVA</strong> dans la vie, ce site a &eacute;t&eacute; d&eacute;velopp&eacute; avec : </p>
+		<img alt="technologies" src="icon/html5_css3_jQuery_slogo.png"/>
+	<p>
+		L'image de la section "Apports" ainsi que mon cartoCV ont été crée grâce aux logiciels de MindMapping 
+		<a href="http://www.mindomo.com/">Mindomo</a> et <a href="http://www.mindjet.com/">Mindjet</a>.
+	</p>
+	<p>
+		La page "Voyage" intègre en javascript l'excellente 
+		<a href="https://developers.google.com/maps/documentation/javascript/tutorial?hl=fr">API Google Maps</a> ainsi que la nouvelle version de cet outil. 		
+	</p>
+	<p>Le formulaire de contact a &eacute;t&eacute; cr&eacute;e gr&acirc;ce &agrave; 
+		<a href="http://posabsolute.github.io/jQuery-Validation-Engine/">Form Validator Engine</a>
+		et les graphiques de ma page de profil gr&acirc;ce &agrave; 
+		<a href="http://www.rgraph.net/">RGraph</a>
+	</p>
+	<p>
+		La retouche des ic&ocirc;nes et images a &eacute;t&eacute; faite via GIMP 2 et icon Craft
+	</p>
+	<p>
+		Les couleurs du site sont le reflet de certains principes qui font partie de ma vie :<br>
+		le <strong id="bleu">bleu</strong> pour <strong id="bleu">l'ouverture d'esprit</strong> et <strong id="bleu">l'honn&ecirc;tet&eacute;</strong>, <strong id="orange">l'orange</strong> pour <strong id="orange">l'&eacute;change</strong> et le <strong id="jaune">jaune</strong> pour <strong id="jaune">la joie de vivre !</strong>
+	</p>
 </div>
 <footer>
 		<section id="footerbox-network">
@@ -107,18 +129,6 @@
 		</section>
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script src="js/profil.js"></script>
-<script src="js/RGraph/libraries/RGraph.common.core.js"></script>
-		<script src="js/RGraph/libraries/RGraph.common.dynamic.js"></script>   <!-- Just needed for dynamic features (eg tooltips) -->
-
-		<script src="js/RGraph/libraries/RGraph.common.annotate.js"></script>  <!-- Just needed for annotating -->
-		<script src="js/RGraph/libraries/RGraph.common.context.js"></script>   <!-- Just needed for context menus -->
-		<script src="js/RGraph/libraries/RGraph.common.effects.js"></script>   <!-- Just needed for visual effects -->
-		<script src="js/RGraph/libraries/RGraph.common.key.js"></script>       <!-- Just needed for keys -->
-		<script src="js/RGraph/libraries/RGraph.common.resizing.js"></script>  <!-- Just needed for resizing -->
-		<script src="js/RGraph/libraries/RGraph.common.tooltips.js"></script>  <!-- Just needed for tooltips -->
-		<script src="js/RGraph/libraries/RGraph.common.zoom.js"></script>   
-		<script src="js/RGraph/libraries/RGraph.radar.js"></script>
-		<script src="js/RGraph/libraries/RGraph.hbar.js"></script> 		
+<script src="js/myJScript.js"></script>	
 </body>
 </html>
