MAJ html et css fr v2

--- a/fr v2/cv.html
+++ b/fr v2/cv.html
@@ -46,6 +46,7 @@
 				<ul>
 					<li><a href="http://ehalter.com/cv.html">CV</a></li>
 					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
 					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
 				</ul>
 			</li>
