--- a/fr v2/recrutement.html
+++ b/fr v2/recrutement.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 <header>
-	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
-			<img alt="Emmanuel Halter" src="images/title.png"/>
-		</a>
-		<div>
+	<a title="Accueil" href="http://ehalter.com">
+				<img alt="Emmanuel Halter" src="images/title.png"/>
+	</a>
+	<div>
+		<div name="quote">
 			<blockquote>
 				<h1>
 					<span class='message'></span>
@@ -27,17 +27,17 @@
 			</blockquote>
 			<h2 class="source"></h2>			
 		</div>
-	</section>
-	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/recrutement.html">
-			<img alt="fr" src="icon/flag_fr.png"/>
-		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/recruitment.html">
-			<img alt="en" src="icon/flag_en.png"/>
-		</a>
-	</section>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>
 	<nav>
-		<ul id="menu">
+		<ul name="menu">
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
@@ -46,6 +46,7 @@
 				<ul>
 					<li><a href="http://ehalter.com/cv.html">CV</a></li>
 					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a><li>
 					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
 				</ul>
 			</li>
@@ -70,7 +71,7 @@
 				<a href="http://ehalter.com/contact.html">Contact</a>
 			</li>
 		</ul>
-	</nav>		
+	</nav>	
 </header>
 <div class="content">
 	<article>
@@ -94,7 +95,7 @@
 	<img id="comm" alt="communication" src="images/fcv.png"/>
 </div>
 <footer>
-		<section id="footerbox-network">
+		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
@@ -106,7 +107,7 @@
 					<span id="connect-skype" class="sbconnecticon"></span>
 				</a>
 		</section>	
-		<section id="footerbox-about">
+		<section name="about">
 			<h1>A propos</h1>
 			<p>
 				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
