--- a/fr v2/futur.html
+++ b/fr v2/futur.html
@@ -46,6 +46,7 @@
 				<ul>
 					<li><a href="http://ehalter.com/interets.html">CV</a></li>
 					<li><a href="http://ehalter.com/interets.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
 					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
 				</ul>
 			</li>
