--- a/fr v2/index_bis.html
+++ b/fr v2/index_bis.html
@@ -15,13 +15,11 @@
 </head>
 <body>
 <header>
-	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
-			<img alt="Emmanuel Halter" src="images/title.png"/>
-		</a>
-	</section>
-	<section id="header-right">
-		<div id="quote">
+	<a title="Accueil" href="http://ehalter.com">
+				<img alt="Emmanuel Halter" src="images/title.png"/>
+	</a>
+	<div>
+		<div name="quote">
 			<blockquote>
 				<h1>
 					<span class='message'></span>
@@ -29,17 +27,17 @@
 			</blockquote>
 			<h2 class="source"></h2>			
 		</div>
-		<div id="flag">
+		<aside>
 			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
 				<img alt="fr" src="icon/flag_fr.jpg"/>
 			</a>
 			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
 				<img alt="en" src="icon/flag_en.jpg"/>
 			</a>
-		</div>
-	</section>
+		</aside>
+	</div>
 	<nav>
-		<ul id="menu">
+		<ul name="menu">
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
@@ -48,7 +46,7 @@
 				<ul>
 					<li><a href="http://ehalter.com/cv.html">CV</a></li>
 					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/expériences.html">Expériences</a><li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
 					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
 				</ul>
 			</li>
@@ -101,7 +99,7 @@
 		</article>
 </div>
 <footer>
-		<section id="footerbox-network">
+		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
@@ -113,7 +111,7 @@
 					<span id="connect-skype" class="sbconnecticon"></span>
 				</a>
 		</section>	
-		<section id="footerbox-about">
+		<section name="about">
 			<h1>A propos</h1>
 			<p>
 				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
