--- a/fr v2/voyage.html
+++ b/fr v2/voyage.html
@@ -16,11 +16,11 @@
 </head>
 <body onload="initialiser()">
 <header>
-	<section id="header-left">
-		<a title="Accueil" href="http://ehalter.com">
-			<img alt="Emmanuel Halter" src="images/title.png"/>
-		</a>
-		<div>
+	<a title="Accueil" href="http://ehalter.com">
+				<img alt="Emmanuel Halter" src="images/title.png"/>
+	</a>
+	<div>
+		<div name="quote">
 			<blockquote>
 				<h1>
 					<span class='message'></span>
@@ -28,43 +28,44 @@
 			</blockquote>
 			<h2 class="source"></h2>			
 		</div>
-	</section>
-	<section id="header-right">
-		<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/voyage.html">
-			<img alt="fr" src="icon/flag_fr.png"/>
-		</a>
-		<a rel="home" title="Anglais" href="http://ehalter.com/en/travel.html">
-			<img alt="en" src="icon/flag_en.png"/>
-		</a>
-	</section>
+		<aside>
+			<a rel="home" title="Fran&#231;ais" href="http://ehalter.com/index.html">
+				<img alt="fr" src="icon/flag_fr.jpg"/>
+			</a>
+			<a rel="home" title="Anglais" href="http://ehalter.com/en/index.html">
+				<img alt="en" src="icon/flag_en.jpg"/>
+			</a>
+		</aside>
+	</div>
 	<nav>
-		<ul id="menu">
+		<ul name="menu">
 			<li>
 				<a href="http://ehalter.com">Accueil</a>
 			</li>
 			<li>
 				<a href="#">Profil</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">CV</a></li>
-					<li><a href="http://ehalter.com/interets.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/interets.html">Apports</a></li>
+					<li><a href="http://ehalter.com/cv.html">CV</a></li>
+					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
+					<li><a href="http://ehalter.com/expériences.html">Expériences</a></li>
+					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
 				</ul>
 			</li>
 			<li>
 				<a href="#">Intérêts</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/interets.html">Voyage</a></li>
-					<li><a href="http://ehalter.com/interets.html">Sport</a></li>
-					<li><a href="http://ehalter.com/interets.html">Recrutement</a></li>
+					<li><a href="http://ehalter.com/histoire.html">Histoire</a></li>
+					<li><a href="http://ehalter.com/voyage.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/sport.html">Sport</a></li>
+					<li><a href="http://ehalter.com/recrutement.html">Recrutement</a></li>
 				</ul>
 			</li>
 			<li>
 				<a href="#">Projets</a>
 				<ul>
-					<li><a href="http://ehalter.com/interets.html">Mission</a></li>
-					<li><a href="http://ehalter.com/interets.html">HappiWork Plan</a></li>
-					<li><a href="http://ehalter.com/interets.html">Futurs</a></li>
+					<li><a href="http://ehalter.com/missions.html">Missions</a></li>
+					<li><a href="http://ehalter.com/happiwork.html">HappiWork Plan</a></li>
+					<li><a href="http://ehalter.com/futurs.html">Futurs</a></li>
 				</ul>
 			</li>
 			<li>
@@ -92,7 +93,7 @@
 	</section>
 </div>
 <footer>
-		<section id="footerbox-network">
+		<section name="network">
 			<h1>Restons connect&eacute;s</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
@@ -104,7 +105,7 @@
 					<span id="connect-skype" class="sbconnecticon"></span>
 				</a>
 		</section>	
-		<section id="footerbox-about">
+		<section name="about">
 			<h1>A propos</h1>
 			<p>
 				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
